--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/my_notitle"
@@ -22,9 +22,26 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.welcome.GuideActivity"
-            android:theme="@style/fullscreen"></activity>
+            android:theme="@style/my_notitle"></activity>
+        <activity android:name=".activity.MainActivity"
+            android:theme="@style/my_notitle"></activity>
         <activity android:name=".activity.UpLoadActivity"></activity>
         <activity android:name=".activity.DownLoadActivity"></activity>
+
+        <!-- User defined.  For test only  用户自定义的广播接收器-->
+        <receiver
+            android:name=".jpush.MyReceiver"
+            android:exported="false"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.REGISTRATION" /> <!--Required  用户注册SDK的intent-->
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" /> <!--Required  用户接收SDK消息的intent-->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> <!--Required  用户接收SDK通知栏信息的intent-->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
+                <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
+                <category android:name="com.zxgzeroapp.workingart" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
